# redpencilkata-cpp

./: CMakeLists.txt  README.md
src/: RedPencilKata.cpp  RedPencilKata.h
test/: TestRedPencilKata.cpp
